// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover should renders the provided button as expected 1`] = `
<DocumentFragment>
  <button>
    Sample popover button
  </button>
</DocumentFragment>
`;

exports[`Popover should renders the tooltip content as expected 1`] = `
<DocumentFragment>
  <button>
    Sample popover button
  </button>
  <div
    class="popper-container"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      id="arrow"
      style="position: absolute;"
    />
    <p>
      popover content
    </p>
  </div>
</DocumentFragment>
`;
